<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AboutActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        android:src="@drawable/softizone" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/todo"
        android:src="#bb020202" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:text="@string/app_name"
                android:textColor="#ffffff"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:text="@string/about_cutline"
                android:textColor="#ffffff"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>

    <android.support.v7.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="30dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="2dp"
        app:contentPadding="@dimen/fab_margin">

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fab_margin"
            android:gravity="center"
            android:text="@string/contact_us" />

    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="75dp"
        android:layout_marginRight="75dp"
        android:src="@drawable/ic_facebook"
        app:backgroundTint="#3b5998"
        app:elevation="7dp"
        app:fabSize="normal"
        app:layout_anchor="@id/card"
        app:layout_anchorGravity="bottom|start" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/youtube"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_youtube"
        app:backgroundTint="#d20101"
        app:elevation="7dp"
        app:fabSize="normal"
        app:layout_anchor="@id/card"
        app:layout_anchorGravity="bottom|center" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="75dp"
        android:layout_marginRight="75dp"
        android:src="@drawable/ic_google_plus"
        android:tint="#fff"
        app:backgroundTint="#d20101"
        app:elevation="7dp"
        app:fabSize="normal"
        app:layout_anchor="@id/card"
        app:layout_anchorGravity="bottom|end" />

</android.support.design.widget.CoordinatorLayout>