<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".Dialogs.QuestionsDialog">

    <EditText
        android:id="@+id/textValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        android:background="@null"
        android:ellipsize="middle"
        android:enabled="false"
        android:maxLines="3"/>
    <TextView
        android:id="@+id/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/edit"
        android:textColor="@color/colorAccent"
        android:visibility="visible" />

    <TextView
        android:id="@+id/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/done"
        android:textColor="@color/colorAccent"
        android:visibility="gone" />

    <RadioGroup
        android:id="@+id/question_or_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:checked="true"
            android:text="@string/question"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/answer"
            android:textStyle="bold" />
    </RadioGroup>

    <ScrollView
        android:id="@+id/questions_Layout"
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin">

        <RadioGroup
            android:id="@+id/questions_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbars="vertical">

            <RadioButton
                android:id="@+id/question_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Question 1" />

            <RadioButton
                android:id="@+id/question_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Question 2" />

            <RadioButton
                android:id="@+id/question_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Question 3" />

            <RadioButton
                android:id="@+id/question_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Question 4" />

            <RadioButton
                android:id="@+id/question_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Question 5" />

            <RadioButton
                android:id="@+id/question_other"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/other_question" />

        </RadioGroup>
    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_btn"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/cancel" />

        <Button
            android:id="@+id/ok_btn"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/ok" />
    </LinearLayout>

</LinearLayout>