<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/todo"
        android:src="@drawable/not_running_service" />

    <ImageView
        android:id="@+id/about"
        android:layout_width="?attr/actionBarSize"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="end"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="13dp"
        android:src="@drawable/ic_about" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="4">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/todo"
                android:src="@drawable/cutline_foreground" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/service_switch"
                        style="@style/Base.TextAppearance.AppCompat.Medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="20dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:text="@string/service"
                        android:textColor="#000"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/language_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:orientation="horizontal"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:contentDescription="@string/todo"
                            android:padding="5dp"
                            android:src="@drawable/ic_translation" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/language_txt"
                                style="@style/Base.TextAppearance.AppCompat.Small"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/language"
                                android:textColor="#000" />

                            <TextView
                                android:id="@+id/language_value"
                                style="@style/Base.TextAppearance.AppCompat.Small"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/english" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/file_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:orientation="horizontal"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/ic_file" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/file_txt"
                                style="@style/Base.TextAppearance.AppCompat.Small"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/file"
                                android:textColor="#000" />

                            <TextView
                                android:id="@+id/file_value"
                                style="@style/Base.TextAppearance.AppCompat.Small"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ellipsize="start"
                                android:scrollHorizontally="true"
                                android:singleLine="true"
                                android:text="@string/no_file_selected" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </FrameLayout>
    </LinearLayout>
</FrameLayout>